manager/src/main/resources/k8s/templates/gateway/service.th.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: [(${name})]
    app.kubernetes.io/managed-by: quick
    app.kubernetes.io/component: gateway
  name: [(${name})]
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: [(${name})]
    app.kubernetes.io/component: gateway
  type: ClusterIP
